src/test/ui/stable-features.stderr
error: the feature `test_accepted_feature` has been stable since 1.0.0 and no longer requires an attribute to enable
  --> $DIR/stable-features.rs:6:12
   |
LL | #![feature(test_accepted_feature)]
   |            ^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/stable-features.rs:4:9
   |
LL | #![deny(stable_features)]
   |         ^^^^^^^^^^^^^^^

error: the feature `rust1` has been stable since 1.0.0 and no longer requires an attribute to enable
  --> $DIR/stable-features.rs:9:12
   |
LL | #![feature(rust1)]
   |            ^^^^^

error: aborting due to 2 previous errors

